update plugin tag

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 					<url>http://172.31.17.171:8080/manager</url>
 					<server>mytomcat</server>
 					<path>/mywebapp</path>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
 			<plugin>
